Fix problem with social links on narrow screens
The border was being broken onto multiple lines, resulting in an ugly
appearance. Added media query to remove border when the screen is too
small.

--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,7 @@ td.left {
 
 #social-links-container {
   text-align: center;
-  padding: 1.75em;
+  padding: 1.75em 0;
 }
 
 #social-links {
@@ -86,6 +86,14 @@ td.left {
   border: 1px solid black;
   border-radius: 8px;
   box-shadow: 2px 2px 4px gray;
+}
+
+/* Drop border around social links on narrow screens */
+@media only screen and (max-width: 400px) {
+  #social-links {
+    border: none;
+    box-shadow: none;
+  }
 }
 
 .legal {
